--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,6 +20,8 @@
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.launcher">
+    
+      <uses-sdk android:targetSdkVersion="13" />
 
     <original-package android:name="com.android.launcher2" />
 
